# test_task_Wht.agency

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/db/: Person.py  Team.py  models.py  person_team_method.py  session.py
app/routers/: router.py  team_router.py  user_router.py
app/schemas/: pySchemas.py
app/utils/: utils.py
